--- a/src/app/ZS/fresh-fruit/template/FreshFruitComponent.html
+++ b/src/app/ZS/fresh-fruit/template/FreshFruitComponent.html
@@ -1,1 +1,186 @@
-<h2>鲜果</h2>
+<div class="content special special-content">
+  <!--筛选器-->
+  <div class="select f-clearfix">
+    <!--分类-->
+    <div class="oc f-clearfix pull-left f-li">
+      <h5 class="pull-left">品类</h5>
+      <div class="f-select pull-left f-clearfix">
+        <div class="pull-left left">
+          <a href="#" class="active">
+            <span class="f-all line">全部</span>
+          </a>
+        </div>
+        <div class="pull-left right">
+          <a href="#"><span class="line">国产水果</span></a>
+          <a href="#"><span class="line">时令水果</span></a>
+          <a href="#"><span class="line">瓜类</span></a>
+          <a href="#"><span class="line">柑橘橙柚</span></a>
+          <a href="#"><span class="line">苹果</span></a>
+          <a href="#"><span class="line">香蕉</span></a>
+          <a href="#"><span class="line">椰子</span></a>
+          <a href="#"><span class="line">奇异果</span></a>
+          <a href="#"><span class="line">牛油果</span></a>
+          <a href="#"><span class="line">芒果</span></a>
+          <a href="#"><span class="line">草莓</span></a>
+          <a href="#"><span class="line">樱桃</span></a>
+          <a href="#"><span class="line">桃子</span></a>
+          <a href="#"><span class="line">西梅</span></a>
+          <a href="#"><span class="line">荔枝</span></a>
+          <a href="#"><span class="line">柠檬</span></a>
+        </div>
+      </div>
+    </div>
+    <!--产地-->
+    <div class="oc f-clearfix pull-left f-li">
+      <h5 class="pull-left">产地</h5>
+      <div class="f-select pull-left f-clearfix">
+        <div class="pull-left left">
+          <a href="#" class="active">
+            <span class="f-all line">全部</span>
+          </a>
+        </div>
+        <div class="pull-left right">
+          <a href="#"><span class="line">中国</span></a>
+          <a href="#"><span class="line">美国</span></a>
+          <a href="#"><span class="line">智利</span></a>
+          <a href="#"><span class="line">泰国</span></a>
+          <a href="#"><span class="line">西班牙</span></a>
+          <a href="#"><span class="line">意大利</span></a>
+          <a href="#"><span class="line">马来西亚</span></a>
+          <a href="#"><span class="line">马来西亚</span></a>
+          <a href="#"><span class="line">日本</span></a>
+          <a href="#"><span class="line">阿根廷</span></a>
+        </div>
+      </div>
+    </div>
+    <!--价格-->
+    <div class="oc f-clearfix pull-left f-li f-pai">
+      <h5 class="pull-left">排序</h5>
+      <div class="f-select pull-left f-clearfix">
+        <div class="pull-left left">
+          <a href="#" class="active">
+            <span class="f-all line">默认</span>
+          </a>
+        </div>
+        <div class="pull-left right">
+          <a href="#"><span class="line">价格从低到高</span></a>
+          <a href="#"><span class="line">价格从高到低</span></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--列表-->
+  <div class="list f-clearfix">
+    <div class="part pull-content">
+      <ul>
+        <li *ngFor="let fruits of fruitsList">
+          <div class="wrapper">
+            <div class="img">
+              <a href="#">
+                <img class="lazy" src="{{fruits.img}}">
+              </a>
+            </div>
+            <div class="f-info">
+              <div class="f-name">{{fruits.name}}</div>
+              <span class="f-unit">￥{{fruits.price}}/斤</span>
+              <div class="f-shopping"></div>
+            </div>
+
+          </div>
+        </li>
+        <li>
+          <div class="wrapper">
+            <div class="img">
+              <a href="#">
+                <img class="lazy" src="../../../assets/specialOffer/fruit1.jpg">
+              </a>
+            </div>
+            <div class="f-info">
+              <div class="f-name">荷兰青啤梨</div>
+              <span class="f-unit">￥39.90/斤</span>
+              <div class="f-shopping"></div>
+            </div>
+
+          </div>
+        </li>
+        <li>
+          <div class="wrapper">
+            <div class="img">
+              <a href="#">
+                <img class="lazy" src="../../../assets/specialOffer/fruit1.jpg">
+              </a>
+            </div>
+            <div class="f-info">
+              <div class="f-name">荷兰青啤梨</div>
+              <span class="f-unit">￥39.90/斤</span>
+              <div class="f-shopping"></div>
+            </div>
+
+          </div>
+        </li>
+        <li>
+          <div class="wrapper">
+            <div class="img">
+              <a href="#">
+                <img class="lazy" src="../../../assets/specialOffer/fruit3.jpg">
+              </a>
+            </div>
+            <div class="f-info">
+              <div class="f-name">荷兰青啤梨</div>
+              <span class="f-unit">￥39.90/斤</span>
+              <div class="f-shopping"></div>
+            </div>
+
+          </div>
+        </li>
+        <li>
+          <div class="wrapper">
+            <div class="img">
+              <a href="#">
+                <img class="lazy" src="../../../assets/specialOffer/fruit2.jpg">
+              </a>
+            </div>
+            <div class="f-info">
+              <div class="f-name">荷兰青啤梨</div>
+              <span class="f-unit">￥39.90/斤</span>
+              <div class="f-shopping"></div>
+            </div>
+
+          </div>
+        </li>
+        <li>
+          <div class="wrapper">
+            <div class="img">
+              <a href="#">
+                <img class="lazy" src="../../../assets/specialOffer/fruit2.jpg">
+              </a>
+            </div>
+            <div class="f-info">
+              <div class="f-name">荷兰青啤梨</div>
+              <span class="f-unit">￥39.90/斤</span>
+              <div class="f-shopping"></div>
+            </div>
+
+          </div>
+        </li>
+        <li>
+          <div class="wrapper">
+            <div class="img">
+              <a href="#">
+                <img class="lazy" src="../../../assets/specialOffer/fruit2.jpg">
+              </a>
+            </div>
+            <div class="f-info">
+              <div class="f-name">荷兰青啤梨</div>
+              <span class="f-unit">￥39.90/斤</span>
+              <div class="f-shopping"></div>
+            </div>
+
+          </div>
+        </li>
+      </ul>
+
+    </div>
+
+  </div>
+</div>
