--- a/src/app/ZS/homepage-head/css/HomepageHeadComponent.css
+++ b/src/app/ZS/homepage-head/css/HomepageHeadComponent.css
@@ -36,6 +36,8 @@ nav li a:hover {
 .homepage-head{
   width: 100%;
   height: 150px;
+  box-shadow: 0 2px 8px rgba(230,230,230,0.75);
+  border-bottom: 1px solid #f1f1f1;
 }
 .homepage-head-first{
   width: 100%;
