--- a/src/styles.css
+++ b/src/styles.css
@@ -151,3 +151,42 @@
 .l-follow-prompt>div{
   float: left;
 }
+/* 删除收货人信息 */
+.l-delAddress-title{
+  float: left;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+.l-delete-address{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 99999;
+  width: 460px;
+  padding: 6px;
+  margin: -144px 0 0 -210px;
+  border: 8px;
+  border-color: rgba(0,0,0,0.5);
+  background: rgba(0,0,0,0.16);
+}
+.l-delAddress-button{
+  min-height: 80px;
+  padding-top: 30px;
+  background: #fff;
+}
+.l-addr-formitem{
+  width: 100%;
+  line-height: 30px;
+  padding-bottom: 30px;
+}
+.l-addr-formitem>button{
+  min-width: 90px;
+  margin-right: 15px;
+  border-radius: 4px;
+}
+#l-addr-sure{
+  margin-left: 120px;
+}
+#l-addr-cancel{
+  margin-left: 0;
+}
