--- a/src/app/ZS/fruit-register/template/FruitRegisterComponent.html
+++ b/src/app/ZS/fruit-register/template/FruitRegisterComponent.html
@@ -1,4 +1,7 @@
+<!-- 注册页面 -->
+<!-- 头部公用部分 -->
 <login-head></login-head>
+<!-- 注册部分 -->
 <div class="fruit-login-middle">
   <div class="fruit-login-middle-small">
       <div class="fruit-login-middle-small-left">
@@ -21,10 +24,10 @@
             </div>
 
            <button class="register-btn">注册</button>
-           <a href="" style="text-decoration: none;display: block;color: #666666;font-size: 18px;margin-top: 23px;margin-left: 423px;border-bottom: 1px solid #666;height: 24px;width: 76px;">会员登陆</a>
+           <a class="go-to-value-a" href="">会员登陆</a>
 
       </div>
-      <div class="fruit-login-middle-small-right" style="width: 50%;height: 100%;float: left;">
+      <div class="fruit-register-middle-small-right">
        <!-- <img class="member-logo" style="margin-left: 52px" src="../../../assets/img/huiyuan.jpg">-->
         <div class="myslides" style="margin-left: 52px;height: 400px;">
           <ks-swiper-container [options]="swipeOptions">
@@ -36,6 +39,7 @@
       </div>
   </div>
 </div>
+<!-- 尾部公用部分 -->
 <login-bottom></login-bottom>
 
 
