--- a/src/app/ZS/login-bottom/template/LoginBottomComponent.html
+++ b/src/app/ZS/login-bottom/template/LoginBottomComponent.html
@@ -2,7 +2,7 @@
   <div class="fruit-login-bottom-small">
     <div class="fruit-login-bottom-small-new">
       <div class="fruit-login-bottom-one">
-        <img class="fruit-login-bottom-one-we"  src="../../../assets/img/fruit-wechat.jpg">
+        <img class="fruit-login-bottom-one-we"  src="../../../../assets/img/fruit-wechat.jpg">
         <label class="fruit-login-bottom-one-lab">我的果园官方微信</label>
       </div>
       <div class="fruit-login-bottom-two">
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="fruit-login-bottom-one">
-        <img class="fruit-login-bottom-one-we" src="../../../assets/img/fruit-app.jpg">
+        <img class="fruit-login-bottom-one-we" src="../../../../assets/img/fruit-app.jpg">
         <label class="fruit-login-bottom-one-lab">我的果园APP</label>
       </div>
     </div>
