--- a/src/app/ZS/login-head/template/LoginHeadComponent.html
+++ b/src/app/ZS/login-head/template/LoginHeadComponent.html
@@ -1,5 +1,5 @@
 <div class="fruit-login-head">
-  <div style="width: 1280px;margin: 0 auto;height: 110px;">
+  <div class="fruit-login-head-small">
     <img class="fruit-logo" src="../../../assets/img/fruit-title.png">
       <span class="fruit-login-welcome">
         欢迎使用
