--- a/src/app/ZS/custom-packages/template/CustomPackagesComponent.html
+++ b/src/app/ZS/custom-packages/template/CustomPackagesComponent.html
@@ -1,1 +1,144 @@
-<h2>自定义套餐</h2>
+<div class="content special special-content">
+  <!--筛选器-->
+  <div class="select f-clearfix">
+    <!--分类-->
+    <div class="oc f-clearfix pull-left f-li">
+      <h5 class="pull-left">品类</h5>
+      <div class="f-select pull-left f-clearfix">
+        <div class="pull-left left">
+          <a href="#" class="active">
+            <span class="f-all line">全部</span>
+          </a>
+        </div>
+        <div class="pull-left right">
+          <a href="#"><span class="line">国产水果</span></a>
+          <a href="#"><span class="line">时令水果</span></a>
+          <a href="#"><span class="line">瓜类</span></a>
+          <a href="#"><span class="line">柑橘橙柚</span></a>
+          <a href="#"><span class="line">苹果</span></a>
+          <a href="#"><span class="line">香蕉</span></a>
+          <a href="#"><span class="line">椰子</span></a>
+          <a href="#"><span class="line">奇异果</span></a>
+          <a href="#"><span class="line">牛油果</span></a>
+          <a href="#"><span class="line">芒果</span></a>
+          <a href="#"><span class="line">草莓</span></a>
+          <a href="#"><span class="line">樱桃</span></a>
+          <a href="#"><span class="line">桃子</span></a>
+          <a href="#"><span class="line">西梅</span></a>
+          <a href="#"><span class="line">荔枝</span></a>
+          <a href="#"><span class="line">柠檬</span></a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <!--列表-->
+
+  <div class="list f-clearfix">
+    <div class="part pull-content">
+      <ul>
+        <li *ngFor="let freshFruit of freshFruits">
+          <div class="wrapper">
+            <div class="img">
+              <a href="#">
+                <img class="lazy" src="{{freshFruit.img}}">
+              </a>
+            </div>
+            <div class="f-info">
+              <span class="f-name">{{freshFruit.name}}</span>
+              <span class="f-unit">{{freshFruit.price}}</span>
+              <img style="width: 32px;margin-top: -35px;float: right;margin-right: 10px;"
+                   src="../../../../assets/fruit/jiahao.png">
+            </div>
+
+          </div>
+        </li>
+      </ul>
+
+    </div>
+  </div>
+</div>
+
+<!-- 横条提示部分 -->
+<div style="width: 100%;height: 100px;float: left;background-color: #8FA550;">
+  <div style="width: 1280px;height: 100%;background-color: #8FA550;margin: 0 auto;text-align: center;padding-top: 26px;">
+           <span style="display: block;font-size: 29px;font-weight: bolder;color: white;letter-spacing: 10px;">自定义套餐详情</span>
+  </div>
+</div>
+
+<!-- 底部自定义详情部分 -->
+<div class="z-custom-bottom" style="width: 100%;height: 339px;float: left;border-top: 1px solid #ECECEC;">
+  <div class="z-custom-bottom" style="width: 1280px;height: 100%;margin: 0 auto;">
+    <div class="z-custom-bottom-one" style="width: 30%;height: 100%;float: left;text-align: center;border: 1px solid #ECECEC;box-shadow: 0 0 3px #A5A5A5;">
+      <img style="width: 380px;margin-top: -20px;" src="../../../../assets/fruit/lanzi.gif">
+    </div>
+    <div class="z-custom-bottom-one" style="width: 35%;height: 100%;float: left;">
+      <div class="z-custom-bottom-one-small"
+           style="width: 80%;margin: 0 auto;height: 100%;border-left: 1px solid #ECECEC;box-shadow: 0 0 3px #A5A5A5;border-right:1px solid #ECECEC;text-align: center">
+        <label class="z-custom-bottom-one-small-lab" style="font-size: 20px;">选中的商品 ：</label>
+        <div class="z-custom-bottom-one-small-div" style="width: 100%;height: 302px;overflow: auto;text-align: left;">
+          <div style="width: 100%;height: 50px;border-bottom: 1px solid #ECECEC;">
+            <label style="float: left;font-size: 18px;margin-top: 10px; ">傻妹傻妹苹果</label>
+            <img style="float: right;width: 34px;margin-top: 6px;" src="../../../../assets/fruit/jianhao.png">
+          </div>
+          <div style="width: 100%;height: 50px;border-bottom: 1px solid #ECECEC;">
+            <label style="float: left;font-size: 18px;margin-top: 10px; ">傻妹傻妹苹果</label>
+            <img style="float: right;width: 34px;margin-top: 6px;" src="../../../../assets/fruit/jianhao.png">
+          </div>
+          <div style="width: 100%;height: 50px;border-bottom: 1px solid #ECECEC;">
+            <label style="float: left;font-size: 18px;margin-top: 10px; ">傻妹傻妹苹果</label>
+            <img style="float: right;width: 34px;margin-top: 6px;" src="../../../../assets/fruit/jianhao.png">
+          </div>
+          <div style="width: 100%;height: 50px;border-bottom: 1px solid #ECECEC;">
+            <label style="float: left;font-size: 18px;margin-top: 10px; ">傻妹傻妹苹果</label>
+            <img style="float: right;width: 34px;margin-top: 6px;" src="../../../../assets/fruit/jianhao.png">
+          </div>
+          <div style="width: 100%;height: 50px;border-bottom: 1px solid #ECECEC;">
+            <label style="float: left;font-size: 18px;margin-top: 10px; ">傻妹傻妹苹果</label>
+            <img style="float: right;width: 34px;margin-top: 6px;" src="../../../../assets/fruit/jianhao.png">
+          </div>
+          <div style="width: 100%;height: 50px;border-bottom: 1px solid #ECECEC;">
+            <label style="float: left;font-size: 18px;margin-top: 10px; ">傻妹傻妹苹果</label>
+            <img style="float: right;width: 34px;margin-top: 6px;" src="../../../../assets/fruit/jianhao.png">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="z-custom-bottom-one" style="width: 35%;border: 1px solid #ECECEC;box-shadow: 0 0 3px #A5A5A5;height: 100%;float: left;">
+      <div style="text-align: center;">
+        <label style="font-size: 20px;">爱心提示 ：</label>
+      </div>
+      <div style="border: 1px solid white;width: 100%;height: 300px;text-align: left;">
+        <span style="font-size: 18px;float: left;display: block;height: 26px;">更多推荐 :</span>
+        <div style="width: 100%;height: 270px;margin-top: 27px;overflow: auto;text-align: center;">
+          <div style="width: 100%;height: 90px;border-bottom: 1px solid #ECECEC;">
+            <img src="../../../../assets/fruit/fruit03.jpg" style="width: 88px;float: left">
+            <div style="width: 200px;height: 80px;float: left;text-align: left;margin-left: 10px;">
+                <span style="display: block;margin-top: 15px;">荷兰青啤梨</span>
+                <span style="display: block;">￥39.90/斤</span>
+            </div>
+            <img style="width: 32px;margin-top: 26px;float: right;margin-right: 10px;" src="../../../../assets/fruit/jiahao.png">
+
+          </div>
+          <div style="width: 100%;height: 90px;border-bottom: 1px solid #ECECEC;">
+            <img src="../../../../assets/fruit/fruit03.jpg" style="width: 88px;float: left">
+            <div style="width: 200px;height: 80px;float: left;text-align: left;margin-left: 10px;">
+              <span style="display: block;margin-top: 15px;">荷兰青啤梨</span>
+              <span style="display: block;">￥39.90/斤</span>
+            </div>
+            <img style="width: 32px;margin-top: 26px;float: right;margin-right: 10px;" src="../../../../assets/fruit/jiahao.png">
+          </div>
+          <div style="width: 100%;height: 90px;border-bottom: 1px solid #ECECEC;">
+            <img src="../../../../assets/fruit/fruit03.jpg" style="width: 88px;float: left">
+            <div style="width: 200px;height: 80px;float: left;text-align: left;margin-left: 10px;">
+              <span style="display: block;margin-top: 15px;">荷兰青啤梨</span>
+              <span style="display: block;">￥39.90/斤</span>
+            </div>
+            <img style="width: 32px;margin-top: 26px;float: right;margin-right: 10px;" src="../../../../assets/fruit/jiahao.png">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
