--- a/src/app/ZS/fruit-register/css/FruitRegisterComponent.css
+++ b/src/app/ZS/fruit-register/css/FruitRegisterComponent.css
@@ -80,4 +80,19 @@
   /* width: 140px; */
   width: 440px;
 }
-
+.go-to-value-a{
+  text-decoration: none;
+  display: block;
+  color: #666666;
+  font-size: 18px;
+  margin-top: 23px;
+  margin-left: 423px;
+  border-bottom: 1px solid #666;
+  height: 24px;
+  width: 76px;
+}
+.fruit-register-middle-small-right{
+  width: 50%;
+  height: 100%;
+  float: left;
+}
