--- a/src/app/ZS/new-password/template/NewPasswordComponent.html
+++ b/src/app/ZS/new-password/template/NewPasswordComponent.html
@@ -1,19 +1,19 @@
 <login-head></login-head>
-<div style="height: 265px;">
-  <div style="width: 900px;height: 210px;margin: 55px auto;box-shadow: 0 4px 4px #cbc7c4;border: solid 1px #e4e0dc;">
-    <div style="border-bottom: 1px solid #ECECEC;border-top:1px solid white;height: 50px;width: 900px;">
-      <label style="display: block;font-size: 18px;color: #666;margin-top: 10px;">设置新密码</label>
+<div class="new-password-big">
+  <div class="new-password-small">
+    <div class="new-password-small-one">
+      <label class="new-password-small-one-lab">设置新密码</label>
     </div>
-    <div style="height: 50px;width: 900px;text-align: center;">
-      <label style=" color: #666;font-size: 16px;margin-top: 13px;width: 150px;text-align: right;">请输入新密码：</label>
-      <input style="width: 270px;margin-left: 18px;" type="password">
+    <div class="new-password-small-two">
+      <label class="new-password-small-two-lab">请输入新密码：</label>
+      <input class="new-password-small-two-inp" type="password">
     </div>
-    <div style="height: 50px;width: 900px;">
-      <label style="color: #666;font-size: 16px;margin-top: 13px;width: 150px;text-align: right;margin-left: 230px;">请再次输入新密码：</label>
-      <input style="width: 270px;margin-left: 18px;" type="password">
+    <div class="new-password-small-three">
+      <label class="new-password-small-three-lab">请再次输入新密码：</label>
+      <input class="new-password-small-three-inp" type="password">
     </div>
-    <div style="height: 60px;width: 900px;text-align: center">
-      <button style="width: 80px;height: 36px;border: 0;font-size: 18px;margin-top: 5px;background-color: #64A131;border-radius: 4px;color: #ffffff;">提交</button>
+    <div class="new-password-small-four">
+      <button class="new-password-small-four-but">提交</button>
     </div>
   </div>
 </div>
